CRUD features working

--- a/trelloBoard.html
+++ b/trelloBoard.html
@@ -2,16 +2,15 @@
 <html>
   <head>
     <title>Trello Board</title>
-    <link rel="stylesheet" href="trelloBoard.css" />
+    <link rel="stylesheet" href="css/trelloBoard.css" />
   </head>
   <body onload="list_all_cards();">
     <div class="container">
       <div class="heading_toDo">
         <h2 >todos</h2>
-        <input type="text"  placeholder="Place your new card here!" 
-        class="card_new" autofocus=" " id="card_name" value=" ">
+        <input type="text" class="card_new" autofocus=" " id="card_name" value=" ">
       <div class="all_cards">
     </div>
-    <script src="trelloBoard.js" ></script> 
+    <script src="js/trelloBoard.js" ></script> 
 </body>
 </html>
