variable and function names updated

--- a/trelloBoard.html
+++ b/trelloBoard.html
@@ -4,13 +4,13 @@
     <title>Trello Board</title>
     <link rel="stylesheet" href="css/trelloBoard.css" />
   </head>
-  <body onload="list_all_cards();">
+  <body onload="listAllCards();">
     <div class="container">
       <div class="heading_toDo">
         <h2 >todos</h2>
         <input type="text" class="card_new" autofocus=" " id="card_name" value=" ">
       <div class="all_cards">
     </div>
-    <script src="js/trelloBoard.js" ></script> 
+    <script src="assets/trelloBoard.js" ></script> 
 </body>
 </html>
