class names updated

--- a/trelloBoard.html
+++ b/trelloBoard.html
@@ -6,10 +6,10 @@
   </head>
   <body onload="listAllCards();">
     <div class="container">
-      <div class="heading_toDo">
-        <h2 >todos</h2>
-        <input type="text" class="card_new" autofocus=" " id="card_name" value=" ">
-      <div class="all_cards">
+      <div class="heading-to-do">
+        <h3 >todos</h3>
+        <input type="text" class="card-new" autofocus=" " id="card-name" value=" ">
+      <div class="all-cards">
     </div>
     <script src="assets/trelloBoard.js" ></script> 
 </body>
